Complete redesign - TikTok style video platform with mobile-first dark theme

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "dest": "index.js"
     },
     {
+      "src": "/check-status",
+      "dest": "index.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "public/$1"
     }
